--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "module": "index.ts",
   "type": "module",
   "devDependencies": {
-    "@types/bun": "latest"
+    "@types/bun": "latest",
+    "@types/request-ip": "^0.0.41"
   },
   "scripts": {
     "start": "bun --watch run index.ts"
@@ -18,7 +19,8 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "ip": "^2.0.1",
+    "request-ip": "^3.3.0",
     "ts-node": "^10.9.2",
-    "typescript": "^5.5.2"
+    "typescript": "^5.0.0"
   }
 }
